Fixed form_box alignment with res of >=1200

--- a/django/frawt/demo/static/demo/fp.css
+++ b/django/frawt/demo/static/demo/fp.css
@@ -29,6 +29,26 @@ padding:0;
 	background-color: #2996CC;
 }
 
+.items-align-right {
+	text-align: right;
+	padding-right: 0;
+}
+
+.items-align-left {
+	text-align: left;
+	padding-left: 0;
+}
+
+.items-align-center {
+	text-align: center;
+	padding: auto;
+}
+
+.items-align-center2 {
+	text-align: left;
+	padding-left: 0px;
+}
+
 .header_bar {
 	background-color: #4E7352;
 	width: 100%;
@@ -42,7 +62,7 @@ body {
 
 .im-centered {
 	margin: auto;
-	max-width: 399.2px;
+	max-width: 480px;
 }
 
 .frawt_title {
@@ -137,7 +157,7 @@ input {
 
 .result_box {
 	background-color: #fff;
-	margin-top: -117px;
+	margin-top: -107px;
 	padding-top: 25px;
 	padding-bottom: 25px;
 	transition: all 0.3s linear;
@@ -298,7 +318,7 @@ nav ul li {
     100% { -webkit-transform: translateY(-100%); }
 }
 
-@media (min-width: 0px) and (max-width: 992px) {
+@media (min-width: 0px) and (max-width: 1201px) {
 	.container {
 		position: relative;
 		width: 100%;
@@ -307,5 +327,10 @@ nav ul li {
 		background-color: #FFFFFF;
 		z-index: 25;
 		padding: 0;
+	}
+	
+	.items-align-center2 {
+		text-align: center;
+		padding-left: 41px;
 	}
 }
